[cloning,shenker/cloning] anneal works, pcr simulation is WIP. Also fixed a number of simple bugs in DsSeqRecord (printing the complement strand overhangs, and parent class needs to init before we set overhangs in DsSeqRecord.__init__).

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210112 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210112 3G.ipynb
@@ -7,19 +7,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import holoviews as hv\n",
-    "import hvplot.pandas\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import toml\n",
     "import re\n",
-    "import urllib\n",
-    "from datetime import datetime\n",
-    "import string\n",
     "import pygsheets\n",
     "from tqdm.auto import tqdm\n",
     "import Bio.Restriction as Restriction\n",
-    "from Bio.Seq import Seq\n",
     "import benchlingapi"
    ]
   },
@@ -46,15 +38,6 @@
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.registry as registry\n",
     "import paulssonlab.cloning.enzyme as enzyme"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.extension(\"bokeh\")"
    ]
   },
   {
@@ -156,7 +139,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Anneal test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq1 = \"AAAAgtaagagggcgaaggttgga\"\n",
+    "seq2 = \"GGGGtccaaccttcgccctcttac\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq1 = \"AAAAgtaaga\"\n",
+    "seq2 = \"GGGGtcttac\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b = \"ttttttgggg\", \"ggggaaaaaa\"\n",
+    "a, b = (\n",
+    "    \"gcttcacgtctcggtctcaggagcagtacaaaattttttagatgcgtttttaacttcgttccttttcggcgttctaataaccaaagctcagaaataatagatgtacttgagaccggagacgtgctaa\",\n",
+    "    \"ttagcacgtctccggtctcaagtacatctattatttctgagctttggttattagaacgccgaaaaggaacgaagttaaaaacgcatctaaaaaattttgtactgctcctgagaccgagacgtgaagc\",\n",
+    ")\n",
+    "sequence.anneal(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = sequence.anneal(b, a)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = sequence.DsSeqRecord(\n",
+    "    Seq(\"ggggaaaaaacccc\"), upstream_overhang=4, downstream_overhang=4\n",
+    ")\n",
+    "print(x)\n",
+    "print(x.reverse_complement())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# PCR simulation test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{**dict(a=1), **dict(a=2)}"
    ]
   },
   {
@@ -181,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "find_primer_binding_site(seq4p, seq4)"
+    "sequence.find_primer_binding_site(seq4p, seq4)"
    ]
   },
   {
