[cloning,shenker/cloning] WIP pcr simulation. Mostly works, although does not handle circular templates yet. Updated join_seqs to automatically choose the appropriate return type, although this has not been tested at all.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210112 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210112 3G.ipynb
@@ -212,15 +212,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{**dict(a=1), **dict(a=2)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "seq1 = \"TTTT\"\n",
     "seq1a = \"TTTTA\"\n",
     "seq1b = \"TTTTC\"\n",
@@ -255,10 +246,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sequence.find_primer_binding_site(seq5, p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "p1 = \"TTTTTAGAAGA\"\n",
-    "p2 = \"CCCCCAGAGGG\"\n",
+    "p2 = \"TTTTTTAGAGGG\"\n",
     "seq5 = \"AGAAGACCCCGGGGCCCTCT\"\n",
-    "simulate_pcr(p1, p2, seq5)"
+    "sequence.pcr(seq5, p1, p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = \"ttttttatggacaaag\"\n",
+    "p2 = \"ttttttcgatacgggg\"\n",
+    "seq6 = \"atggacaaagactttgatttcgataatattggcaaacgcaccccgtatcg\"\n",
+    "sequence.pcr(seq6, p1, p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.find_primer_binding_site(seq6, p2, try_reverse_complement=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.find_primer_binding_site(\n",
+    "    seq6, sequence.reverse_complement(p2), try_reverse_complement=False\n",
+    ")"
    ]
   },
   {
