[cloning,shenker/cloning] Dramatically improved DsSeqRecord.circular handling, correctly reads genbank topology annotation. WIP ligation. Removed sequence.complement, was unnecessary and the implementation was broken. Minor tweaks to argument overrides in DsSeqRecord.__init__

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210113 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210113 3G.ipynb
@@ -66,137 +66,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Registry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# temp: get parts, plasmid seqs\n",
-    "# check that GG works\n",
-    "# gibson\n",
-    "# command: primer design for plasmid -> part storage vector (oligodest=oLIT)\n",
-    "# PCR with flanks\n",
-    "# primer design for fusion parts\n",
-    "# commands: GG, Gib (need to specify recipient strain!)\n",
-    "# get parts, plasmid seqs"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "reg = registry.Registry(gc, config[\"registry\"][\"folder\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.registry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%timeit\n",
-    "\"J23101\" in df2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.get(\"LIB93\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "reg.duplicate_collection(\"LIB\", \"TESTB\", clear=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Anneal test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq1 = \"AAAAgtaagagggcgaaggttgga\"\n",
-    "seq2 = \"GGGGtccaaccttcgccctcttac\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq1 = \"AAAAgtaaga\"\n",
-    "seq2 = \"GGGGtcttac\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a, b = \"ttttttgggg\", \"ggggaaaaaa\"\n",
-    "a, b = (\n",
-    "    \"gcttcacgtctcggtctcaggagcagtacaaaattttttagatgcgtttttaacttcgttccttttcggcgttctaataaccaaagctcagaaataatagatgtacttgagaccggagacgtgctaa\",\n",
-    "    \"ttagcacgtctccggtctcaagtacatctattatttctgagctttggttattagaacgccgaaaaggaacgaagttaaaaacgcatctaaaaaattttgtactgctcctgagaccgagacgtgaagc\",\n",
-    ")\n",
-    "sequence.anneal(a, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = sequence.anneal(b, a)\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = sequence.DsSeqRecord(\n",
-    "    Seq(\"ggggaaaaaacccc\"), upstream_overhang=4, downstream_overhang=4\n",
-    ")\n",
-    "print(x)\n",
-    "print(x.reverse_complement())"
    ]
   },
   {
@@ -306,260 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DsSeqRecord test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Registry.get_entry ->\n",
-    "#    {\"_type\": \"plasmid\", \"plasmid\": {row...}, \"plasmid_map\": DsSeqRecord}\n",
-    "# Registry.get_seq -> DsSeqRecord\n",
-    "# ligate_seqs([seq1, seq2, seq3], method=\"goldengate\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Bio.SeqRecord import SeqRecord\n",
-    "from Bio.Seq import Seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = Seq(\"aaaagg\" + (\"X\" * 800) + \"ggcccc\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hasattr(b, \"complement\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = sequence.DsSeqRecord(\n",
-    "    Seq(\"aaaagg\" + (\"X\" * 800) + \"ggcccc\"), upstream_overhang=1, downstream_overhang=-2\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(a.reverse_complement())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = \"GGTCTCAaatgAGCTGTCCTGAACAAATTGTGCAGCTTATGCATATGCATCTTGATGGAGATATCCTTCCAAAAGATGAACACGTATTAAATGAACATCTGGAGACATGCGAGAAATGCAGAAAGCATTTTTACGAGATGGAGAAATCCATAGCGCTCGTACGGAGCACATCGCATGTCGAAGCCCCCGCGGATTTTACCGCTAATGTCATGGCAAAATTGCCTAAGGAGAAGAAAAGAGCTTCTGTAAAAAGATGGTTCAGAACCCATTAAaggtTGAGACC\"\n",
-    "s = \"GGTCTCAaaaaGGTCTCAccccGGTCTCAggggGGTCTCAttttgggg\"\n",
-    "# s = \"GGTCTCAaaaaGGTCTAAccccGGTCTAAggggGGTCTAAttttgggg\"\n",
-    "seq = Seq(s)\n",
-    "dsdna = sequence.DsSeqRecord(seq, circular=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enzyme.re_search(dsdna, Restriction.BsaI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for dna in enzyme.re_digest(dsdna, Restriction.BsaI):\n",
-    "    print(repr(dna))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Append test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq = workflow.read_sequence(\n",
-    "    open(\n",
-    "        \"/Users/jacob/Google Drive/Paulsson shared/Documents/FISH/example_construct.gb\"\n",
-    "    ).read()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq = sequence.DsSeqRecord(seq)\n",
-    "seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = seq[:200].features[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x._shift??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq[:200].features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 200\n",
-    "len((seq[:x] + seq[x:]).features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(seq.features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 2733\n",
-    "for a, b in zip(seq.features, (seq[:x] + seq[x:]).features):\n",
-    "    print(a.location, b.location)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = seq.features[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# GG test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dnacauldron as dc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parts = {\n",
-    "    # hhh\n",
-    "}\n",
-    "\n",
-    "repository = dc.SequenceRepository(parts=parts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gibson.assemble -> hhh"
    ]
   },
   {
@@ -591,6 +213,116 @@
     "\n",
     "assembly = golden_gate.assemble(to_join, linear=False)\n",
     "assembly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.get(\"pLIB1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = reg.get(\"pLIB1\")[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.annotations[\"topology\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_seqs = [reg.get(f\"pLIB{plib}\")[\"_seq\"] for plib in (1, 82, 23, 95, 110)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: fix linear digests\n",
+    "# TODO: slice circularity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = test_seqs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_seqs[0].features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_digests[0].annotate(\"foo\", overhangs=False).features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y[0 : len(y)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_digests = [workflow.re_digest_part(seq, Restriction.BsaI) for seq in test_seqs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for seq in test_digests:\n",
+    "    print(seq)"
    ]
   },
   {
