[shenker/cloning,cloning] WIP assemble (renamed from ligate).

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210114 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210114 3G.ipynb
@@ -331,6 +331,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "assembly = sequence.assemble(test_digests)\n",
+    "print(assembly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(\"/Users/jacob/Downloads/test3.gb\", \"w\") as f:\n",
     "    f.write(assembly.format(\"gb\"))"
    ]
