[cloning,shenker/cloning] assemble works for golden gate, including circularization.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210114 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210114 3G.ipynb
@@ -341,6 +341,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(assembly.circularize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(\"/Users/jacob/Downloads/test3.gb\", \"w\") as f:\n",
     "    f.write(assembly.format(\"gb\"))"
    ]
