[cloning,shenker/cloning] First cut of gibson assembly. Inverted inward_cut flags on DsSeqRecord... is this correct? Added lower, seq_lower, and fill_in to DsSeqRecord. Fixed registry.eval_exprs. Changed _slice_seqrecord_feature to truncate annotations at sequence slice endpoints unless None is passed in for annotation_start/stop.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210117 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210117 3G.ipynb
@@ -190,120 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq1 = get_plib_seq(drive_service, 1)\n",
-    "seq2 = get_plib_seq(drive_service, 82)\n",
-    "seq3 = get_plib_seq(drive_service, 23)\n",
-    "seq4 = get_plib_seq(drive_service, 95)\n",
-    "seq5 = get_plib_seq(drive_service, 110)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_join = [\n",
-    "    (sequence.reverse_complement(seq1), Restriction.BsaI, \"Name1\", \"promoter\"),\n",
-    "    (sequence.reverse_complement(seq2), Restriction.BsaI, \"Name2\", \"RBS\"),\n",
-    "    (seq3, Restriction.BsaI, \"Name3\", \"CDS\"),\n",
-    "    (seq4, Restriction.BsaI, \"Name4\", \"terminator\"),\n",
-    "    (sequence.reverse_complement(seq5), Restriction.BsaI, \"Name5\", \"misc_feature\"),\n",
-    "]\n",
-    "\n",
-    "assembly = golden_gate.assemble(to_join, linear=False)\n",
-    "assembly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.get(\"pLIB1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = reg.get(\"pLIB1\")[\"_seq\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.annotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.annotations[\"topology\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "test_seqs = [reg.get(f\"pLIB{plib}\")[\"_seq\"] for plib in (1, 82, 23, 95, 110)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: fix linear digests\n",
-    "# TODO: slice circularity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = test_seqs[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_seqs[0].features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_digests[0].annotate(\"foo\", overhangs=False).features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y[0 : len(y)]"
    ]
   },
   {
@@ -341,6 +228,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "reg.get(\"oLIB85\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.clear_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = reg.get(\"UNS1_A\")\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x[\"_seq\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(assembly.circularize())"
    ]
   },
@@ -367,10 +291,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gibson two test seqs\n",
-    "# gibson two GG'ed TUs\n",
-    "# check we can PCR UNSes onto JUMP vector\n",
-    "# check we can circularize a real 3G rxn"
+    "s1 = \"TACTAGAGACCTACTAGTAGCGGCCGCTGCAGGCaaaaaaaaaaaa\"\n",
+    "s2 = \"aaaaaaaaaaaaGGAGAGAGACCTGCACCATATGCGGTGAGACTAG\""
    ]
   },
   {
@@ -379,11 +301,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_join = [\n",
-    "    (seq, storage_enzyme),\n",
-    "    (storage_vector_seq, storage_enzyme),\n",
-    "]\n",
-    "plasmid_map = golden_gate.assemble(to_join, linear=False)"
+    "# gibson two test seqs\n",
+    "# gibson two GG'ed TUs\n",
+    "# check we can PCR UNSes onto JUMP vector\n",
+    "# check we can circularize a real 3G rxn"
    ]
   },
   {
