[shenker/cloning,cloning] Fixed annotation_start bug in DsSeqRecord.slice.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210119 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210119 3G.ipynb
@@ -78,6 +78,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Correctness verification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = reg.get(\"pLIB200\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = x[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.slice(0, -100, annotation_start=None, annotation_stop=2192).features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.slice(100, None, annotation_start=10, annotation_stop=None).features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/Users/jacob/Downloads/orig.gb\") as f:\n",
+    "    f.write(x[\"_seq\"].format(\"gb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# PCR simulation test"
    ]
   },
