[cloning,shenker/cloning] Fixed DsSeqRecord.reindex bug.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210119 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210119 3G.ipynb
@@ -87,7 +87,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = reg.get(\"pLIB200\")"
+    "# x = reg.get(\"UNS1_A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = reg.get(\"pLIB200\")[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[:100].features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.reindex(-500).reindex(500).features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.reindex(len(x) - 100).features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = reg.get(\"oLIB85\")[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_digest(x, Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_digest(y, Restriction.BsaI)"
    ]
   },
   {
@@ -97,42 +169,6 @@
    "outputs": [],
    "source": [
     "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = x[\"_seq\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y.features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y.slice(0, -100, annotation_start=None, annotation_stop=2192).features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y.slice(100, None, annotation_start=10, annotation_stop=None).features"
    ]
   },
   {
