[cloning,shenker/cloning] DsSeqRecord inward_cut fixed. re_digest now produces correct results.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210119 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210119 3G.ipynb
@@ -87,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# x = reg.get(\"UNS1_A\")"
+    "x = reg.get(\"UNS1_A\")\n",
+    "x"
    ]
   },
   {
@@ -105,34 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x.features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x[:100].features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.reindex(-500).reindex(500).features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.reindex(len(x) - 100).features"
+    "x2 = x.reindex(-50)\n",
+    "x"
    ]
   },
   {
@@ -150,7 +125,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enzyme.re_digest(x, Restriction.BsaI)"
+    "Ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_digest(sequence.DsSeqRecord(x.reindex(-10), circular=False), Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_digest(x.reindex(-10), Restriction.BsaI, circular=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_digest(x2, Restriction.BsaI)"
    ]
   },
   {
@@ -177,8 +179,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/Users/jacob/Downloads/orig.gb\") as f:\n",
-    "    f.write(x[\"_seq\"].format(\"gb\"))"
+    "with open(\"/Users/jacob/Downloads/test.gb\", \"w\") as f:\n",
+    "    f.write(x.format(\"gb\"))"
    ]
   },
   {
