[shenker/snakenbake] Ensure manifold_split is a numpy array.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -75,6 +75,11 @@
     "        # print('R', R.to(u.mbar * u.min / u.uL))\n",
     "        delta_P = R * Q_per_snake\n",
     "        print(f\"{name}: {delta_P.to(u.bar)}\")\n",
+    "        if \"manifold_split\" in md:\n",
+    "            flow_rate = Q_per_snake * md[\"manifold_split\"]\n",
+    "        else:\n",
+    "            flow_rate = Q_per_snake\n",
+    "        print(f\"    flow rate: {flow_rate}\")\n",
     "        if \"flow_nonuniformity\" in extra:\n",
     "            print(f\"    flow nonuniformity: {extra['flow_nonuniformity']}\")\n",
     "        if \"manifold_width\" in md:\n",
@@ -266,7 +271,7 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 201215\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 210108\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
@@ -274,7 +279,7 @@
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     "    alignment_mark_position=40e3,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/201215basilisk.gds\")"
+    "s.write_gds(main_cell, \"designs/210108basilisk.gds\")"
    ]
   },
   {
@@ -375,6 +380,13 @@
     "    )\n",
     ").to(u.bar)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
